--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,6 +1,18 @@
 <nav-bar class='pb4 sticky inset-bs-0 z1'></nav-bar>
-<site-container>
+  <site-container>
     <h1 class='mb6 text5 font-light text-center tracking-2'>
-      Home
-    </h1>
-</site-container>
+      Hi — I’m <span class='font-semibold'>Axol Lotl</span><br /> </h1>
+
+    <text-container class='leading3 mi-auto mbe6'>
+      <p>
+        I’m a web developer currently working at <a href='https://begin.com'>Begin</a>, where my friends and I maintain the excellent HTML first framework, <a href='https://enhance.dev'>Enhance</a>.
+      </p>
+      <p>
+        I truly believe that the internet is the most powerful tool for bringing people together and raising our collective understanding. I have dedicated my career to building tools to enable people to share their dreams with the world. I've worked on and with the Web Platform for 25 years and plan on continuing to make web development more approachable for creatives and developers alike.
+      </p>
+      <p>
+        To learn more about my experience, you can <a href='/resume'>check out my Résumé</a>.
+      </p>
+    </text-container>
+  </site-container>
+<site-footer></site-footer>
