--- a/app/pages/resume.html
+++ b/app/pages/resume.html
@@ -3,4 +3,8 @@
     <h1 class='mb6 text5 font-light text-center tracking-2'>
       Résumé
     </h1>
+    <resume-container class='mi-auto'>
+      <resume-experience></resume-experience>
+    </resume-container>
 </site-container>
+<site-footer></site-footer>
